--- a/package.json
+++ b/package.json
@@ -4,10 +4,15 @@
   "private": true,
   "dependencies": {
     "cra-template": "1.2.0",
+    "framer-motion": "^12.4.10",
+    "locomotive-scroll": "^4.1.4",
+    "lottie-react": "^2.4.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-fast-marquee": "^1.6.5",
+    "react-router-dom": "^7.3.0",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.9.3",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.2.4"
   },
