--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "dependencies": {
     "cra-template": "1.2.0",
     "framer-motion": "^12.4.10",
+    "imagekitio-react": "^4.3.0",
     "locomotive-scroll": "^4.1.4",
     "lottie-react": "^2.4.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-fast-marquee": "^1.6.5",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.3.0",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.3",
